2006-03-10  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-main-window.c: Walk through the list of
	plugins installed in a window and uninstall them before the window
	is destroyed. Fixes 333973.

	* src/core-utils/gnc-gobject-utils.c: Change the output from this
	file to use g_message instead of g_warning so the
	--g-fatal-warnings argument doesn't trip over it.

2006-03-10  Derek Atkins  <derek@ihtfp.com>

	* src/import-export/qif-import/qif-dialog-utils.scm:
	  gnc:get-account-from-full-name requires two args, not three (#334170)

	* Makefile.am: put ".links" into lib so rm -rf works properly
	  from the top-level of the source tree.

2006-03-10  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-main-window.c: Show newly created windows
	when restoring the second and subsequent windows.

2006-03-10  Christian Stimming <stimming@tuhh.de>

	* po/*.po: Recode all po files into UTF-8 character encoding,
	except for the most recent ones, and uk.po which seems to contain
	encoding errors.

	* configure.in, src/gnome-utils/dialog-utils.c: Gnucash replaced
	dlopen/dlsym by the g_module functions, so don't error out if they
	are unavailable; dlsym is needed only optionally for BSD
	linkers. Also removes quotation error in AC_MSG_ERROR macro.

	* src/gnome-utils/gnc-druid-provider-multifile-gnome.h,
	gnc-druid-provider-file-gnome.c: If <glob.h> unavailable, provide
	own typedef and disable globbing.

2006-03-09  Andreas Köhler  <andi5.py@gmx.net>

	* src/gnome-utils/gnc-main-window.c: Move retrieval of private
	  data of main window after the creation of the window.

2006-03-09  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-tree-model-commodity.c:
	* src/gnome-utils/gnc-main-window.c:
	* src/gnome-utils/gnc-tree-model-price.c:
	* src/gnome-utils/gnc-plugin-page.[ch]:
	* src/gnome-utils/gnc-account-sel.c:
	* src/gnome-utils/account-quickfill.c:
	* src/engine/gnc-commodity.h:
	* src/engine/gnc-engine.h: