@@ -1,3 +1,8 @@
+2006-03-11  Andreas Köhler  <andi5.py@gmx.net>
+
+	* src/gnome-utils/gnc-tree-view-account.c: Avoid calculation of
+	  account period total for the top level account.
+
 2006-03-10  David Hampton  <hampton@employees.org>
 
 	* src/gnome-utils/gnc-main-window.c: Walk through the list of
